apps/node-app/overlays/prd/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prd
    external-dns.alpha.kubernetes.io/hostname: node-app.dominio.com.br
spec:
  rules:
    - host: node-app.dominio.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: node-app
                port:
                  number: 80
  tls:
    - hosts:
        - node-app.dominio.com.br
      secretName: node-app-letsencrypt-secret
